[package]
name = "cupressa"
version = "0.1.0"
authors = ["Clinton Bowen <clinton.bowen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = "0.5.12"
swc_ecma_ast = "0.20.0"             # have to build ast objects some kind of way
swc_ecma_codegen = "0.21.0"         # codegeneration
swc_ecma_parser = "0.23.0"          # Feature-complete es2019 parser.
swc_ecma_parser_macros = "0.4.1"    # Macros for swc_ecma_parser.
petgraph = "0.5.0"                  # Graph data structure library. Provides graph types and graph algorithms.
z3-sys = "0.6.0"                    # Low-level bindings for the Z3 SMT solver from Microsoft Research
z3 = "0.5.0"                        # High-level rust bindings for the Z3 SMT solver from Microsoft Research

[[example]]
name = "usage"